_includes/manuals/2.1/3.5.2_configuration_options.md

Configuration is broken into two parts. The */etc/foreman/settings.yaml* file and the *Administer > Settings* page. The configuration file contains a few low-level options that need to be set before Foreman starts but the majority of Foreman customization is managed from within the web interface on the *Settings* page.

The configuration file can also override those settings specified in the web interface.  Any settings added in the config file that are available in the web interface will be made read-only.

#### The config/settings.yaml file

##### YAML start

The first non-comment line of this file must be three dashes.

<pre>
---
</pre>

##### require_ssl

This boolean option configures whether Foreman insists on using only https/ssl encrypted communication channels in the web interface. This does not configure the channels used to contact the smart-proxies. Note that certain operations will still accept a http connection even if this is set, for example, the downloading of a finish script.

<pre>
:require_ssl: true
</pre>

##### unattended

This boolean option configures whether Foreman will act as a simple node classifier for puppet, or support the full spectrum of operations required for managing a host's lifecycle. When set to _true_ then foreman will provide full host building facilities for various operating systems.
<pre>
:unattended: true
</pre>

##### support_jsonp

This boolean options configures whether Foreman will provide support for the JavaScript object notation with padding. When set to _true_ then Foreman will allow to pass a callback parameter to the API calls.

<pre>
:support_jsonp: false
</pre>

##### logging

This options contains a hash of parameters that override the current logging configuration.  It supports any of the options that are in `logging.yaml` (see below), but most usually it's used to change the log level for debugging.

<pre>
:logging:
  :level: debug
</pre>

##### loggers

This options contains a hash of config options for specific loggers, which cover parts of Foreman functionality.  It's usually used to enable additional types of logging.

Available loggers are:

* app - web requests and all general application logs (default: true)
* audit - additional fact import statistics, numbers of facts added/updated/removed (default: true)
* ldap - high level LDAP queries (e.g. find users in group) and LDAP operations performed (default: false)
* permissions - evaluation of user roles, filters and permissions when loading pages (default: false)
* sql - SQL queries made through Rails ActiveRecord, only debug (default: false)

Uncomment or add a :loggers block to enable or disable loggers:

<pre>
:loggers:
  :app:
    :enabled: true
  :ldap:
    :enabled: false
  :permissions:
    :enabled: false
  :sql:
    :enabled: false
</pre>

Some plugins may add their own loggers. See the configuration files in /etc/foreman/plugins/ which should list possibilities and enable them there.

#### The 'logging.yaml' file

This settings file can be found at `/etc/foreman/logging.yaml`, or `config/logging.yaml` on a source installation.  It controls the default logging locations, formatting and log levels per Rails environment.

In a normal installation, only the "production" environment is relevant - development and test are only used in source installations.  The file has comments for the most common configuration options, which can be changed here or overridden from the `logging` directive in the main `settings.yaml` config file (see above).

#### The 'Administer/Settings' page

##### access_unattended_without_build

When enabled, unattended URLs used to fetch templates for individual hosts will be accessible irrespective of the host build state. When disabled, the unattended URLs will only function in build mode to prevent accidental rebuilding etc.
Default: false

##### administrator

When Foreman needs to mail the administrator then this is the email address that it will contact.  The domain is determined from Facter, else it will default to the ":domain" setting in /etc/foreman/settings.yaml.
Default: root@&lt;your domain&gt;.

##### always_show_configuration_status

When reporting the configuration status of hosts, usually only hosts with outdated reports, or a Puppet proxy/master set and no reports will be considered out of sync. When true, all hosts will be considered out of sync until a report is received. This setting should be enabled in environments where Foreman is used for reporting without smart proxies.
Default: false

##### authorize_login_delegation

mod_proxy and other load balancers will set a REMOTE_USER environment variable. If this is _true_ , your users will be able to login through an external service and Foreman requests will be authenticated using this REMOTE_USER variable.
Default: false

##### authorize_login_delegation_api

Same as above, but this setting allows REMOTE_USER authentication for API calls as well.
Default: false

##### authorize_login_delegation_auth_source_user_autocreate

If you have authorize_login_delegation set, new users can be autocreated through your external authentication mechanism by changing this to the name of the Auth Source you want to use to auto create users.
Default: ''

##### bmc_credentials_accessible

By default passwords stored on BMC network interfaces will be visible to other users who can view the host via the ENC YAML preview and accessible through templates, for the purposes of configuring BMC interfaces automatically.

When set to false, all BMC passwords will be redacted in template and ENC output, preventing both users from viewing the passwords directly and also from configuration (or access) in Puppet and other config management tools using the ENC interface. Foreman will continue to use the stored password for BMC power operations.

Note that setting this to false also this requires that `safemode_render` be enabled, else it could be bypassed.

Default: true

##### clean_up_failed_deployment

During host provisioning onto a compute resource using images or templates and a finish script, this setting controls the behavior of Foreman when the script fails. When true, the new host and virtual machine (on the compute resource) will be deleted if the script fails. When false, the host and virtual machine are left running so the script can be debugged.
Default: true

##### create_new_host_when_facts_are_uploaded

When facts are received from Puppet or other configuration management systems, a corresponding host will be created in Foreman if the certname or hostname is unknown.  When false, this behavior is disabled and facts will be discarded from unknown hosts.
Default: true
See also: create_new_host_when_report_is_uploaded

##### create_new_host_when_report_is_uploaded

If a report is received from Puppet or other configuration management systems, a corresponding host will be created in Foreman if the hostname is unknown.  When false, this behavior is disabled and reports will be discarded from unknown hosts.
Default: true
See also: create_new_host_when_facts_are_uploaded

##### db_pending_migration
When you upgrade Foreman using foreman-installer, the database may migrate its data model to the new version. If this is true, the next run of the installer will run these migrations. If it is false, the database will remain untouched.

Default: true

##### db_pending_seed
When you upgrade Foreman using foreman-installer, the new version may contain some seed data such as operating systems, provisioning templates, roles and more. It will also update any previous seeded data. If this is true, the next run of the installer will seed this data. If it is false, the database will not get this seeded data.

Default: true

##### default_locale
Specifies, which language is set for newly created users. This also applies to new users managed via LDAP.

Default: '', but 'Browser language' is used for newly created users. This also applies to new users managed via LDAP.

##### default_timezone
Specifies, which timezone is set for newly created users. 

Default: '', but 'Browser timezone' is used for newly created users.

##### default_location

The name of an location that hosts uploading facts into Foreman will be assigned to if they are new or missing an location.  This can be used when hosts are created through fact uploads to ensure they're assigned to the correct location to prevent resource mismatches.  For inherited location, the fact should use slash-delimited names, e.g. "USA/New York".
Default: '', but initialized by the database seed to the initially seeded location

##### default_organization

The name of an organization that hosts uploading facts into Foreman will be assigned to if they are new or missing an organization.  This can be used when hosts are created through fact uploads to ensure they're assigned to the correct organization to prevent resource mismatches.  For inherited organization, the fact should use slash-delimited names, e.g. "ACME Inc/Engineering".
Default: '', but initialized by the database seed to the initially seeded organization

##### default_puppet_environment

When Foreman receives a fact upload from a machine that it has not previously come across it will create a host in its database. If the facts from that host did not contain information about the puppet environment then it will assign the _default_puppet_environment_ environment to this host.
Default: production

##### Default_variables_Lookup_Path

A Smart-variable's match criteria are evaluated in a specific order and if this search order is not provided then _Default_variables_Lookup_Path_ is used.
Default: ["fqdn", "hostgroup", "os", "domain"]

##### delivery_method

The method for sending emails from the Foreman instance, either _sendmail_ (running the command set by _sendmail_location_) to send mail via the configured local MTA, or _smtp_ for direct connection to an outbound SMTP server (given by settings with the _smtp_ prefix).
Default: sendmail

##### dns_conflict_timeout

When updating a host and DNS conflict detection is performed, each lookup for A and PTR records will be limited to this time in seconds.
Default: 3 (seconds)
See also: query_local_nameservers

##### email_reply_address

The return address applied to outgoing emails.
Default: Foreman-noreply@&lt;your domain&gt;

##### email_subject_prefix

The subject line prefix for any emails sent by Foreman.
Default: [foreman]

##### enc_environment

When this is _true_, Foreman will send the puppet environment in the ENC yaml output. This is meant to fix conflicts between a node's puppet.conf environment and the environment set in Foreman. On Puppet 3+, agents will take the environment sent by the ENC. When _false_, the ENC yaml will not contain the environment, the node will not update its environment and use the one at puppet.conf.
Default: true

##### entries_per_page

The number of entries that will be shown in the web interface for list operations.
Default: 20

##### fix_db_cache

Foreman maintains a cache of permissions and roles. If this is set to true, Foreman will recreate this cache on the next run.
Default: false

##### foreman_url

Emails may contain embedded references to Foreman's web interface. This option allows the URL prefix to be configured.  The FQDN is determined from Facter, else it will default to the ":fqdn" setting in /etc/foreman/settings.yaml.
Default: https://FQDN/ or http://FQDN/ (depending on require_ssl)
See also: unattended_url

##### global_(PXELinux/PXEGrub/PXEGrub2)
Default PXELinux/PXEGrub/PXEGrub2 template. This template gets deployed to all configured TFTP servers. For example, this template can be used to make new hosts in a network boot into [Foreman Discovery](http://theforeman.org/plugins/foreman_discovery/).
* Default: none

##### matchers_inheritance

Matchers used in smart variables or smart class parameters to match host groups, organizations or locations can be inherited by children too (e.g. a matcher for hostgroup=Base will also apply to Base/Web). Set this to false to make matchers only match a particular hostgroup, organization or location and not its children.
Default: true

##### host_power_status

Controls whether the power status of hosts is shown on the hosts list, which may lead to decreased performance, or if the column is removed.
Default: true

##### host_owner

Defines which is the default owner of newly provisioned hosts. It can be either a user or a user group. If unset, the default owner of the host will be the user who created the host.
Default: none

##### idle_timeout

Users that stay idle (no requests sent to Foreman) for more than this number of minutes will be logged out.
Default: 60

##### interpolate_erb_in_parameters

If _true_, Foreman variables will be exposed to the ENC. Check [Template Writing](http://projects.theforeman.org/projects/foreman/wiki/TemplateWriting) for a more comprehensive guide on how to create and use these variables in your ERB templates.
Default: true

##### ignore_facts_for_operatingsystem

When Foreman receives facts for a host (from any source, Puppet, Ansible...) it will try to update the operating system to whatever the incoming facts say. This setting allows you to import all facts but ignore those related with operating system. If this is set to _true_, Foreman will update the operating system of hosts using these facts.
Default: false
See also: ignored_facts_for_domain

##### ignore_facts_for_domain

See ignored_facts_for_operatingsystem - this setting is the equivalent for domains.
Default: false

##### ignore_puppet_facts_for_provisioning

If this option is set to _true_ then Foreman will not update the IP and MAC addresses stored on a host's network interfaces with the values that it receives from facts. It will also include Foreman's values for IP and MAC to Puppet in its node/ENC information.
Default: false
See also: ignored_interface_identifiers

##### ignored_interface_identifiers

When importing facts and updating stored information on network interfaces, any network interface with an identifier (e.g. `eth0`) that matches any of the items in this list will be ignored and not updated. This can be used to avoid updating special types of interfaces when Foreman has limited or no understanding of them. The contents are an array of strings which may contain `*` wildcards to match zero or more characters.
Default: `['lo', 'usb*', 'vnet*', 'macvtap*', '_vdsmdummy_', 'veth*']`
See also: ignore_puppet_facts_for_provisioning

##### libvirt_default_console_access

The IP address that should be used for the console listen address when provisioning new virtual machines via Libvirt.
Default: 0.0.0.0

##### location_fact

The name of a fact from hosts reporting into Foreman which gives the full location name of the host.  This can be used when hosts are created through fact uploads to ensure they're assigned to the correct location to prevent resource mismatches.  The location of a host will be updated to the value of the fact on every fact upload.  For inherited locations, the fact should use slash-delimited names, e.g. "USA/New York".
Default: foreman_location

##### local_boot_(PXELinux/PXEGrub/PXEGrub2)
When creating hosts that use a PXE loader, this will be the default template for local boot.
* Default: none

##### login_delegation_logout_url

If your external authentication system has a logout URL, redirect your users to it here. This setting can be useful if your users sign in Foreman through SSO, and you want them to sign out from all services when they log out Foreman.
Default: ''

##### login_text

Specifies text to be displayed on the Foreman login page underneath the version number.
Default: ''

##### manage_puppetca

If this option is set to _true_ then Foreman will manage a host's Puppet certificate signing. If it is set to _false_ then some external mechanism is required to ensure that the host's certificate request is signed.
Default: true

##### max_trend

Days that trend graphs will capture.
Default: 30

##### modulepath

This it the modulepath that foreman uses when processing puppet modules. It is usually able to determine this itself at runtime but if it is not able to find a value then _modulepath_ is used.
Default: /etc/puppet/modules

##### name_generator_type

Specifies the method used to generate random hostnames when creating a new host, either _Random-based_, _MAC-based_ for bare metal hosts only, or _Off_ to disable the function and leave the field blank.
Default: _Random-based_

##### oauth_active

Enables OAuth authentication for API requests.
Default: false

##### oauth_consumer_key

OAuth consumer key
Default: none

##### oauth_consumer_secret

OAuth consumer secret
Default: none

##### oauth_map_users

This allows OAuth users to specify which user their requests map to. When this is _false_, OAuth requests will map to admin.
Default: true

##### organization_fact

The name of a fact from hosts reporting into Foreman which gives the full organization name of the host.  This can be used when hosts are created through fact uploads to ensure they're assigned to the correct organization to prevent resource mismatches.  The organization of a host will be updated to the value of the fact on every fact upload.  For inherited organization, the fact should use slash-delimited names, e.g. "ACME Inc/Engineering".
Default: foreman_organization

##### outofsync_interval

Duration in minutes after which servers classed as out of sync, if the report origin has not been identified.
Default: 30

##### Parametrized_Classes_in_ENC

In Puppet 2.6.5+, the ENC may send a hash of the class's attributes and values. Before then, the ENC used to send just an array of class names. Set this to _true_ if you are using any version of Puppet equal to or higher than 2.6.5.
Default: true

##### proxy_request_timeout

Timeout in seconds used when making REST requests to a Smart Proxy, e.g. when importing Puppet classes or creating DHCP records.  May be set to a larger value when certain operations take a long time.
Default: 60

##### puppet_interval

This overrides _outofsync_interval_ duration in minutes after which servers reporting via Puppet are classed as out of sync.
Default: 35

##### puppet_server

The default puppet server hostname. For larger organizations this is often a non fqdn so that a name like _puppet_ can be a different host within each DNS domain.
Default: puppet

##### puppetrun

If this option is set to _true_ then Foreman will be able to trigger a puppet run on any host that it manages.
Default: false

##### query_local_nameservers

If _true_, Foreman will query the local DNS. When _false_ Foreman will query the SOA/NS authority. Warning! Querying a resolver can cause Foreman to get false positives when checking presence of DNS records due to caching.
Default: false
See also: dns_conflict_timeout

##### remote_addr

When Foreman receives client web requests via a smart proxy, proxy or load balancer, the original client source IP address is lost, replaced by the smart proxy, proxy, or load balancers IP instead.  For template requests without a token, this causes a failure, because Foreman can't match the request against a valid host.

Smart proxies, and other devices if configured, can preserve the original client IP within an HTTP `X-Forwarded-For` header, which Foreman can evaluate and use to match the request against a valid host.

In order to prevent spoofing and provide some level of security, Foreman will only evaluate X-Forwarded-For headers from devices which match the list of IPs configured here.

This is a regular expression, so it can support several load balancers, i.e: (10.0.0.1|127.0.0.1)
Default: 127.0.0.1

##### require_ssl_smart_proxies

When set to _true_, Foreman requires a client SSL certificate on requests from smart proxies or services on them (e.g. Puppet masters), and will verify the CN of the certificate against the known smart proxies. If false, it uses the reverse DNS of the IP address making the request. require_ssl in ```config/settings.yaml``` should be enabled too. For more information about securing the connection between Puppet masters or smart proxies and Foreman, see [Section 5.4.1](manuals/{{page.version}}/index.html#5.4.1SecuringPuppetMasterRequests)
Default: true

##### restrict_registered_smart_proxies

When set to _true_, services such as Puppet masters (or Salt, Chef) need to have a smart proxy registered with the appropriate feature (e.g. Puppet) to access fact/report importers and ENC output.
Default: true

##### root_pass

If a root password is not provided whilst configuring a host or its host group then this encrypted password is used when building the host.
Default: ''
(To generate a new one you should use: *openssl passwd -1 "your_password"* )


##### safemode_render

In the default configuration with `safemode_render` set to _true_, access to variables, Foreman internals and any object that is not whitelisted within Foreman will be denied for system security.

When set to _false_, any object may be accessed by a user with permission to use templating features, either via editing of templates, parameters or smart variables. This permits users full remote code execution _on the Foreman server_, effectively disabling all authorization if set to _false_. It is strongly recommended for this setting to be _true_ in most environments.

Default: true

##### send_welcome_email

New account holders will receive a welcome email when the account is created if this is enabled, including their username and a link to Foreman.
Default: false

##### sendmail_arguments

Arguments given to the sendmail command when sending emails from Foreman.
Default: `-i`

##### sendmail_location

Path to the sendmail binary, or other sendmail-compatible MTA for outbound email.
Default: `/usr/sbin/sendmail`

##### smtp_address

Outbound SMTP connections will connect to the SMTP server at this address, either a hostname or IP address.
Default: _empty value_ (implying localhost)

##### smtp_authentication

Outbound SMTP connections will authenticate to the SMTP server using the protocol specified here, either: _plain_ for the PLAIN SMTP mechanism (plain text), _login_ for the LOGIN SMTP mechanism (plain text), _cram-md5_ for the CRAM-MD5 method (hashed, not plain text), or _none_ to disable authentication. See also: _smtp_username_, _smtp_password_.
Default: none

##### smtp_domain

Outbound SMTP connections will use this domain to identify during the HELO/EHLO command.
Default: _empty value_

##### smtp_enable_starttls_auto

Outbound SMTP connections will automatically switch to TLS mode (via `STARTTLS`) when the capability is advertised by the SMTP server. This implies verification of TLS/SSL certificates by default (see also: _smtp_openssl_verify_mode_).
Default: true

##### smtp_openssl_verify_mode

Outbound SMTP connections to a TLS-enabled SMTP server will verify the remote server certificate according to this setting. Either the default (usually _peer_), _none_ for no verification of the server certificate, or _peer_ for explicitly verifying the server certificate. _client_once_ and _fail_if_no_peer_cert_ have no effect in outbound SMTP connections.
Default: Default verification mode (usually _peer_)

##### smtp_password

Outbound SMTP connections with authentication enabled will authenticate with this password (see also: _smtp_username_, _smtp_authentication_).
Default: _empty value_

##### smtp_port

Outbound SMTP connections will connect to the SMTP server on this TCP port. Some SMTP servers may prefer port 587 for email submission.
Default: 25

##### smtp_username

Outbound SMTP connections with authentication enabled will identify with this username (see also: _smtp_password_, _smtp_authentication_).
Default: _empty value_

##### ssl_client_cert_env

Environment variable containing the entire PEM-encoded certificate from the client.  This environment variable is required when authenticating using Subject Alternative Names and will be preferred over `ssl_client_dn_env` if available.  Under Apache HTTP and mod_ssl, `SSLOptions +ExportCertData` sets this environment variable.
Default: SSL_CLIENT_CERT
See also: ssl_client_dn_env

##### ssl_client_dn_env

Environment variable containing the subject DN from a client SSL certificate.  Under Apache HTTP and mod_ssl, `SSLOptions +StdEnvVars` sets this environment variable.
Default: SSL_CLIENT_S_DN
See also: ssl_client_cert_env

##### ssl_client_verify_env

Environment variable containing the verification status of a client SSL certificate
Default: SSL_CLIENT_VERIFY

##### ssl_ca_file

The SSL Certificate Authority file that Foreman will use when connecting to its smart-proxies.
Default: The CA file used by puppet

##### ssl_certificate

The SSL certificate that Foreman will use when connecting to its smart-proxies.
Default: The host certificate used by puppet

##### ssl_priv_key

The SSL private key file that Foreman will use when connecting to its smart-proxies.
Default: The private key file used by puppet

##### token_duration

Time in minutes installation tokens should be valid for, 0 to disable token generation.
Default: 360 (6 hours)

##### trusted_hosts

Other trusted hosts in addition to Smart Proxies allowed to access fact/report importers and ENC output. i.e: [puppetmaster1.yourdomain.com, puppetmaster2.yourdomain.com]
Default: []

##### unattended_url

This controls the URL prefix used in provisioning templates such as TFTP/PXELinux files that refer to the Foreman server.  It is usually HTTP rather than HTTPS due to lack of installer support for HTTPS.  The FQDN is determined from Facter, else it will default to the ":fqdn" setting in /etc/foreman/settings.yaml.
Default: http://FQDN/
See also: foreman_url

##### update_environment_from_facts

If Foreman receives an environment fact from one of its hosts and if this option is _true_, it will update the host's environment with the new value. By default this is not the case as Foreman should manage the host's environment.
Default: false

##### update_ip_from_built_request

If _true_, Foreman will update the host IP with the IP that made the 'build' request. This request is made at the end of a provisioning cycle to indicate a host has completed the build.
Default: false

##### update_subnets_from_facts

If _true_, fact imports from Puppet and other config management tools will update the subnet on host network interfaces to match the IP address given in facts, preventing a mismatch.
Default: false

##### use_shortname_for_vms

When false, any hosts created on a compute resource will use the FQDN of the host for the name of the virtual machine.  When set to the true, the short name (i.e. without domain) will be used instead.
Default: false

##### use_uuid_for_certificates

When enabled, Foreman will generate UUIDs for each host instead of using the hostname as the Puppet certname, which is more reliable with changing hostnames.  Note that when disabling this setting, existing stored certnames won't be changed or discarded until new certificates are requested from a host (i.e. on a rebuild), in order that the existing certificate remains known to Foreman and can be revoked.

##### websockets_encrypt

When enabled, virtual machine consoles using NoVNC will always be sent over an encrypted WebSocket connection. Requires both `websockets_ssl_cert` and `websockets_ssl_key` to be configured too.
Default: true if `require_ssl` is enabled
See also: websockets_ssl_cert, websockets_ssl_key

##### websockets_ssl_cert

Path to the SSL certificate that will be used for the WebSockets server when serving virtual machine consoles.  Should be the same as the SSL certificate used for the Foreman web server (e.g. Apache).

##### websockets_ssl_key

Path to the SSL private key that will be used for the WebSockets server when serving virtual machine consoles.  Should be the same as the SSL key used for the Foreman web server (e.g. Apache).
